# back_end_simcc

./: .env  .env.exemple  .gitignore  CimatecBD_Pos.py  Dockerfile  GFG  PesquisadoresCimatec.xlsx  README.md  SimccBD.py  SimccBD_CSV.py  SimccBD_CSV_SIMCC.py  SimccBD_Production.py  SimccBD_population_v1.py  SimccBD_population_v3.py  Soap_lattes.py  Soap_lattes_PROFNIT.py  article_tax.csv  atualizar_qualis.py  bd_atualizar_qualis.py  bd_ind_prod_graduate_program.py  bd_ind_prod_researcher.py  bd_lattes10_bfs.py  bd_maria.py  bd_openAlex.py  bd_population.py  bd_pos_cimatec.py  bd_production.py  bd_terms.py  cache_simcc.py  calc_ind_prod.py  calc_ind_prod_gp.py  calc_ind_prod_researcher.py  cert.pem  cleaning_database.py  compose.yml  config.py  csv_barema.py  csv_group_researchers.py  csv_group_researchers_by.py  csv_ind_prod_researcher.py  (+56 more)
Dao/: areaFlowSQL.py  generalSQL.py  graduate_programSQL.py  mariaSQL.py  productionSQL.py  relevantSQL.py  resarcher_baremaSQL.py  researcherSQL.py  sgbdSQL.py  taxonomySQL.py  termFlowSQL.py  ufmgSQL.py  util.py
Files/: Planilha de currículo lattes - Inscrições.csv:Zone.Identifier  Researcher Group - Colunas relevantes.csv  alunos_getec_doutorado.xlsx  english  graduate_program_old_simcc.csv  graduate_program_researcher_old_simcc.csv  graduate_program_ufsb.xls  grupos_pesquisa.csv  indice.sql  indice.txt  lattes_researcher.csv  lattes_researcher_cimatec.xlsx  name  pesquisadoresCimatec_v1.xlsx  researcher_cimatec.xlsx  researcher_group.csv  researcher_group_new_simcc.csv  researcher_group_old_simcc.csv  researcher_studant_cimatec.csv  researcher_ufsb.xlsx  tEnergiasRenovaveis.xlsx
Model/: Bibliographic_Production_Researcher.py  Book_Chapter_Researcher.py  Book_Researcher.py  Brand_Researcher.py  City.py  GraduateProgram.py  GraduateProgram_Production.py  Guidance_Researcher.py  Magazine.py  PEvent_Researcher.py  Patent_Researcher.py  Projeto_IC.py  Resarcher_Production.py  Researcher.py  Researcher_Report.py  Software_Researcher.py  Year_Barema.py
Rest/: areaRest.py  area_patentRest.py  book_events_area_patentRest.py  cimatecRest.py  graduateProgramRest.py  mariaRest.py  relevantRest.py  research_productionRest.py  researcherDataRest.py  researcherTermRest.py  script.py  ufmgRest.py
etc/: CimatecBD_Pos.py  SimccBD.py  SimccBD_CSV.py  SimccBD_CSV_SIMCC.py  SimccBD_Production.py  SimccBD_population_v1.py  SimccBD_population_v3.py  Soap_lattes.py  Soap_lattes_PROFNIT.py  atualizar_qualis.py  imageResearcher.py  jcr.py  lattes10.py  mariaConversational.py  mariaTransformes.py  project.py  setup.py  simccDB_Cimatec_Studant.py  simccTAX_CSV.py  simccTAX_CSV_v1.py  testeDAO-PPG-NB02.py  testeDAO.py  testeDate.py  xml_to_df (1).py
files/: tEnergiasRenovaveis.xlsx
new_simcc/: __init__.py  config.py
routines/: conectee_researcher.py  get_graduate_program.py  get_graduate_program_researchers.py  lattes_bfs.py  logger.py  openAlex.py  pog.py  population.py  powerBI.py  production.py  program_indprod.py  researcher_class.py  researcher_image.py  researcher_images.py  researcher_indprod.py  scrape_program_researchers.py  scrape_programs.py  (+3 more)
(+64 files in other folders)
