[tool.poetry]
name = "simcc"
version = "3.0.0"
description = ""
authors = ["meirelesgc <geu_costa@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = {extras = ["standard"], version = "^0.115.6"}
respx = "^0.22.0"
httpx = "^0.28.1"
pydantic-settings = "^2.7.1"
psycopg = {extras = ["pool"], version = "^3.2.3"}
pandas = "^2.2.3"
unidecode = "^1.3.8"
zeep = "^4.3.1"
alembic = "^1.14.0"
testcontainers = {extras = ["postgres"], version = "^4.9.0"}
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"
ruff = "^0.8.4"

[tool.ruff]
line-length = 81
extend-exclude = ['migrations']
ignore = ['PLR0913', 'PLR0917', 'PLR2004']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
run = 'fastapi dev simcc'
test = 'pytest -s -x --cov=simcc -vv; coverage html'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
